style: set thumbnail, change logo, min width

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta content="네니오" property="og:title" />
   <meta content="둘 중 하나 고민될 때, 네니오" property="og:description" />
-  <meta content="%PUBLIC_URL%/logo512.png" property="og:image" />
+  <meta content="%PUBLIC_URL%/thumbnail_800_400.png" property="og:image" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
     manifest.json provides metadata used when your web app is installed on a
